fixed project gap

--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   flex-direction: column;
-  align-content: space-around;
+  align-content: center;
   align-items: center;
   min-height: 100vh;
   padding-top: 60px;
@@ -146,15 +146,14 @@ body {
 }
 
 .all-project-items-container {
+  width: 90%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 90%;
   flex-wrap: wrap;
   align-items: flex-start;
-  align-content: space-between;
-  width: inherit;
+  align-content: space-around;
   height: auto;
 }
 
